--- a/sample_project/config/database.yml
+++ b/sample_project/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
+  username: sample_rails_user
+  password: securepassword
   socket: /tmp/mysql.sock
 
 development:
